--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 	<link  href="http://fonts.googleapis.com/css?family=Neuton:regular" rel="stylesheet" type="text/css" >
 
-	<link rel="stylesheet" href="css/style.css?v=2">
+	<link rel="stylesheet" href="css/style.css?v=3">
 	
 	<script src="js/modernizr.custom.37368.js"></script>
 
@@ -34,7 +34,7 @@
 					<li>If you don’t quite like the easing, grab a handle and fix it.</li>
 					<li>When you’re happy, snag your code and off you go.</li>
 				</ol>
-				<p>Now that we can use CSS transitions in all the modern browsers, let’s make them pretty. I love the classic Penner equations with Flash and jQuery, so I included most of those. If you’re anything like me*, you probably thought this about the default easing options: “ease-in, ease-out...yawn.” The mysterious cubic-bezier has a lot of potential, but was cumbersome to use. Until now.  Also, <nobr>touch-device</nobr> friendly!</p>
+				<p>Now that we can use CSS transitions in all the modern browsers, let’s make them pretty. I love the classic Penner equations with Flash and jQuery, so I included most of those. If you’re anything like me*, you probably thought this about the default easing options: “ease-in, ease-out...yawn.” The mysterious cubic-bezier has a lot of potential, but was cumbersome to use. Until now.  <nobr>Also, touch-device</nobr> friendly!</p>
 
 				<small>*If you <em>are</em> anything like me, we should be friends <a href="http://twitter.com/matthewlein" target="_blank">@matthewlein</a></small>
 			
@@ -141,10 +141,10 @@
 		</section>
 		
 		
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
 		<script>window.jQuery || document.write("<script src='js/jquery-1.5.1.min.js'>\x3C/script>")</script>
 
-		<script src="js/ceaser.1.1.1.min.js"></script>
+		<script src="js/ceaser.1.1.2.js"></script>
 		<script>
 			
 		</script>
