--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
 		<script>window.jQuery || document.write("<script src='js/jquery-1.5.1.min.js'>\x3C/script>")</script>
 
-		<script src="js/ceaser.1.1.2.js"></script>
+		<script src="js/ceaser.1.1.2.min.js"></script>
 		<script>
 			
 		</script>
