removed version in filename. Removed ms prefix and added source link

--- a/index.html
+++ b/index.html
@@ -143,8 +143,10 @@
 				<li>Jared Hardy’s Ceaser Compass extension: <a href="https://github.com/jhardy/compass-ceaser-easing" target="_blank">https://github.com/jhardy/compass-ceaser-easing</a></li>
 				<li>Excellent CSS3 LESS mixin by Matthew Wagerfield: <a href="https://github.com/MatthewWagerfield/LESS-CSS3-Mixins" target="_blank">https://github.com/MatthewWagerfield/LESS-CSS3-Mixins</a></li>
 				<li>Ceaser TextMate Bundle: <a href="https://github.com/matthewlein/Ceaser-CSS-Easing-tmbundle" target="_blank">https://github.com/matthewlein/Ceaser-CSS-Easing-tmbundle</a></li>
+                <li>LESS easing by Kirk Strobeck <a href="https://github.com/kirkstrobeck/bootstrap/blob/master/less/easing.less" target="_blank">https://github.com/kirkstrobeck/bootstrap/blob/master/less/easing.less</a></li>
 				<li>Ceaser cubic bezier’s in <a href="https://github.com/matthewlein/Ceaser/tree/master/developer" target="_blank">JS/LESS/SASS for plugin/mixin developers</a></li>
 				<li>AppMobi did a simple how-to video for Ceaser <a href="http://youtu.be/xv92qmlqZa4" target="_blank">on Youtube</a></li>
+                <li>-ms- prefix was <a href="http://www.impressivewebs.com/dropping-ms-vendor-prefixes-ie10/" target="_blank">never really needed</a></li>
 			</ul>
 		</section>
 
@@ -160,8 +162,7 @@
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
 		<script>window.jQuery || document.write("<script src='js/jquery-1.5.1.min.js'>\x3C/script>")</script>
 
-        <script src="js/ceaser.1.2.min.js"></script>
-        <!-- <script src="js/ceaser.1.1.3.min.js"></script> -->
+        <script src="js/ceaser.js?v1.3"></script>
 
 
 
